Bug 463137 - Konsole displays some characters incorrectly
Summary: Konsole displays some characters incorrectly
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: font (other bugs)
Version First Reported In: 22.12.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-16 22:59 UTC by Blendy
Modified: 2022-12-19 01:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Comparison of the text rendered correctly and incorrectly (4.12 KB, image/png)
2022-12-16 22:59 UTC, Blendy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Blendy 2022-12-16 22:59:54 UTC
Created attachment 154636 [details]
Comparison of the text rendered correctly and incorrectly

SUMMARY
Some of the characters of my powerlevel10k theme are displayed incorrectly. When running "clear" the characters look fine until enter is pressed again. Using the mouse to select those characters will make them render correctly, until a new line is created.

STEPS TO REPRODUCE
1. Open konsole with a prompt that includes the characters "▓▒░"

OBSERVED RESULT
Konsole renders the characters incorrectly unless the screen is cleared or the characters are selected.

EXPECTED RESULT
The characters are always rendered correctly

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.101.0
Qt Version: 5.17.7
Kernel Version: 6.0.12-arch1-1 (64-bit)
Graphics Platform: X11
Comment 1 Bug Janitor Service 2022-12-17 08:33:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/788
Comment 2 Kurt Hindenburg 2022-12-19 01:38:13 UTC
Git commit 7da6bfd024cc461a150ba9304b3c25e1021e9cbb by Kurt Hindenburg, on behalf of Matan Ziv-Av.
Committed on 19/12/2022 at 00:13.
Pushed by hindenburg into branch 'master'.

Set QPainter::Antialiasing at the start of each text line

It is now reset at the end of line by the visual hints drawing code.

M  +1    -1    src/terminalDisplay/TerminalPainter.cpp

https://invent.kde.org/utilities/konsole/commit/7da6bfd024cc461a150ba9304b3c25e1021e9cbb