Set QPainter::Antialiasing at the start of each text line

It is now reset at the end of line by the visual hints drawing code.

BUG: 463137